File: components/nexus-pax-logging/src/main/java/org/sonatype/nexus/pax/logging/VirtualThreadAwareConverter.java