@@ -12,117 +12,152 @@
  */
 package org.sonatype.nexus.pax.logging;
 
-import ch.qos.logback.classic.pattern.ClassicConverter;
-import ch.qos.logback.classic.spi.ILoggingEvent;
+import ch.qos.logback.access.pattern.AccessConverter;
+import ch.qos.logback.access.spi.IAccessEvent;
 
 /**
- * Converter that provides enhanced thread information for Java 21 Virtual Threads.
- * <p>
- * This converter extends the standard thread name output with additional information
- * when the thread is a virtual thread, including:
- * <ul>
- *   <li>Virtual thread ID</li>
- *   <li>Carrier thread information (when available)</li>
- *   <li>Pinned status indicator</li>
- * </ul>
+ * Base abstract class for Logback converters that need to be Virtual Thread aware.
+ * Provides utility methods to detect virtual threads, extract thread IDs, and format
+ * thread information appropriately based on thread type.
  *
- * @since 3.60.0
+ * @since 3.60
  */
-public class VirtualThreadAwareConverter
-    extends ClassicConverter
+public abstract class VirtualThreadAwareConverter
+    extends AccessConverter
 {
-  @Override
-  public String convert(final ILoggingEvent event) {
-    Thread currentThread = Thread.currentThread();
-    String threadName = event.getThreadName();
-    
-    // Check if running on Java 21+ with virtual threads
-    if (isVirtualThread(currentThread)) {
-      StringBuilder threadInfo = new StringBuilder();
-      
-      // Add virtual thread indicator and ID
-      threadInfo.append("VT-").append(threadName);
-      
-      // Add thread ID
-      threadInfo.append("[#").append(currentThread.threadId()).append("]");
-      
-      // Add carrier thread info if available
-      String carrierInfo = getCarrierThreadInfo(currentThread);
-      if (carrierInfo != null && !carrierInfo.isEmpty()) {
-        threadInfo.append("@").append(carrierInfo);
-      }
-      
-      // Add pinned indicator if thread is pinned
-      if (isThreadPinned(currentThread)) {
-        threadInfo.append("[pinned]");
-      }
-      
-      return threadInfo.toString();
-    }
-    
-    // Default behavior for platform threads
-    return threadName;
-  }
-  
   /**
    * Determines if the current thread is a virtual thread.
-   * 
+   * Uses Java 21's Thread.isVirtual() method.
+   *
+   * @return true if the current thread is a virtual thread, false otherwise
+   */
+  protected boolean isVirtualThread() {
+    return Thread.currentThread().isVirtual();
+  }
+
+  /**
+   * Determines if the specified thread is a virtual thread.
+   * Uses Java 21's Thread.isVirtual() method.
+   *
    * @param thread the thread to check
    * @return true if the thread is a virtual thread, false otherwise
    */
-  private boolean isVirtualThread(Thread thread) {
-    try {
-      // Use Java 21 API to check if thread is virtual
-      return thread.isVirtual();
-    }
-    catch (NoSuchMethodError e) {
-      // Running on Java version prior to 21
-      return false;
-    }
+  protected boolean isVirtualThread(Thread thread) {
+    return thread != null && thread.isVirtual();
   }
-  
+
   /**
-   * Gets information about the carrier thread for a virtual thread.
-   * 
-   * @param thread the virtual thread
+   * Gets the ID of the current thread, handling both platform and virtual threads.
+   *
+   * @return the thread ID as a String
+   */
+  protected String getThreadId() {
+    Thread thread = Thread.currentThread();
+    return getThreadId(thread);
+  }
+
+  /**
+   * Gets the ID of the specified thread, handling both platform and virtual threads.
+   *
+   * @param thread the thread to get the ID from
+   * @return the thread ID as a String
+   */
+  protected String getThreadId(Thread thread) {
+    if (thread == null) {
+      return "?"; 
+    }
+    return String.valueOf(thread.threadId());
+  }
+
+  /**
+   * Formats thread information for logging, with different formats for virtual and platform threads.
+   *
+   * @param thread the thread to format information for
+   * @return formatted thread information string
+   */
+  protected String formatThreadInfo(Thread thread) {
+    if (thread == null) {
+      return "unknown";
+    }
+    
+    StringBuilder sb = new StringBuilder();
+    if (isVirtualThread(thread)) {
+      sb.append("VirtualThread[#").append(getThreadId(thread));
+      if (thread.getName() != null && !thread.getName().isEmpty()) {
+        sb.append(',').append(thread.getName());
+      }
+      sb.append(']');
+      
+      // Add carrier thread info if available
+      String carrierInfo = getCarrierThreadInfo(thread);
+      if (carrierInfo != null && !carrierInfo.isEmpty()) {
+        sb.append('/').append(carrierInfo);
+      }
+    } else {
+      // Platform thread
+      sb.append("Thread[#").append(getThreadId(thread));
+      if (thread.getName() != null && !thread.getName().isEmpty()) {
+        sb.append(',').append(thread.getName());
+      }
+      sb.append(",").append(thread.getPriority());
+      sb.append(',').append(thread.getThreadGroup() != null ? thread.getThreadGroup().getName() : "?");
+      sb.append(']');
+    }
+    return sb.toString();
+  }
+
+  /**
+   * Attempts to extract carrier thread information for a virtual thread.
+   * This is implementation-specific and may not be available in all JVMs.
+   *
+   * @param thread the virtual thread to get carrier information for
    * @return carrier thread information or null if not available
    */
-  private String getCarrierThreadInfo(Thread thread) {
-    try {
-      // This is a simplified approach - in a real implementation,
-      // we would use JDK internal APIs or JMX to get carrier thread info
-      String threadString = thread.toString();
-      int carrierIndex = threadString.indexOf("@ForkJoinPool");
-      if (carrierIndex > 0) {
-        int endIndex = threadString.indexOf(" ", carrierIndex);
-        if (endIndex < 0) {
-          endIndex = threadString.length();
-        }
-        return threadString.substring(carrierIndex + 1, endIndex);
-      }
+  protected String getCarrierThreadInfo(Thread thread) {
+    if (!isVirtualThread(thread)) {
       return null;
     }
-    catch (Exception e) {
-      return null;
+    
+    // The state of the thread can indicate if it's mounted on a carrier
+    Thread.State state = thread.getState();
+    if (state == Thread.State.RUNNABLE) {
+      // For running threads, we can assume they're mounted
+      return "runnable";
+    } else if (state == Thread.State.BLOCKED) {
+      // For blocked threads, they might be pinned
+      return "blocked";
     }
+    
+    return null;
   }
-  
+
   /**
-   * Determines if a virtual thread is currently pinned to its carrier thread.
+   * Detects if a virtual thread is currently pinned to its carrier thread.
+   * Pinning occurs when a virtual thread is executing synchronized code or native methods.
    * 
-   * @param thread the virtual thread to check
-   * @return true if the thread is pinned, false otherwise or if cannot determine
+   * Note: This is a best-effort detection and may not be accurate in all cases.
+   * For precise pinning detection, use JVM flags like -Djdk.tracePinnedThreads or JFR events.
+   *
+   * @param thread the thread to check for pinning
+   * @return true if the thread appears to be pinned, false otherwise or if not a virtual thread
    */
-  private boolean isThreadPinned(Thread thread) {
-    try {
-      // In a real implementation, we would use JDK internal APIs or JMX
-      // to determine if a virtual thread is pinned
-      // This is a placeholder implementation
-      String threadString = thread.toString();
-      return threadString.contains("[pinned]");
-    }
-    catch (Exception e) {
+  protected boolean isPinned(Thread thread) {
+    if (!isVirtualThread(thread)) {
       return false;
     }
+    
+    // A virtual thread in BLOCKED state might be pinned
+    // This is a heuristic and not a definitive indicator
+    return thread.getState() == Thread.State.BLOCKED;
   }
+
+  /**
+   * Abstract method that must be implemented by subclasses to convert an access event
+   * into a string representation.
+   *
+   * @param accessEvent the access event to convert
+   * @return the string representation of the event
+   */
+  @Override
+  public abstract String convert(IAccessEvent accessEvent);
 }
